testsuite/tests/ghci/should_run/T14125a.script
:set -XTypeFamilies
data family Foo a
data instance Foo Int = FooInt Int
:kind! Foo Int
let f (FooInt i) = i
:info    f
:type +v f
:type    f
